--- a/website/package.json
+++ b/website/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.8.1",
     "framer-motion": "^6.3.0",
     "next": "12.1.5",
+    "next-sanity": "^0.5.2",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
