--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -9,24 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.0.10",
-    "@chakra-ui/react": "^2.3.4",
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
+    "@chakra-ui/icons": "^2.0.19",
+    "@chakra-ui/react": "^2.6.0",
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
     "@sanity/image-url": "^1.0.1",
-    "framer-motion": "^7.3.5",
-    "next": "12.3.1",
-    "next-sanity": "^0.8.4",
+    "framer-motion": "^10.12.4",
+    "next": "^13.3.1",
+    "next-sanity": "^4.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.8.0"
   },
   "devDependencies": {
-    "@types/node": "18.7.18",
-    "@types/react": "18.0.20",
-    "@types/react-dom": "18.0.6",
-    "eslint": "8.23.1",
-    "eslint-config-next": "12.3.1",
-    "typescript": "4.8.3"
+    "@types/node": "^18.16.2",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
+    "eslint": "^8.39.0",
+    "eslint-config-next": "^13.3.1",
+    "lint-staged": "^13.2.2",
+    "typescript": "^5.0.4"
   }
 }
